--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.2",
     "sequelize": "^6.8.0"
